--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </button>
 
                 <a class="navbar-brand d-flex align-items-center " href="#">
-                    <img src="/imges/download.png" alt="GSMArena Logo" />
+                    <img src="imges/download.png" alt="GSMArena Logo" />
                 </a>
                 <form action="" class="central d-flex align-items-center">
                     <input type="text" class="no-focus-border" placeholder="Search">
@@ -80,11 +80,11 @@
         <div id="leftMenu" class="container ">
             <div class="row">
                 <div class="col-12 d-flex align-items-center d-block">
-                    <a href="/index.html" class="nav-link">Home</a>
-                    <a href="/news.html" class="nav-link">News</a>
-                    <a href="/rewies.html" class="nav-link">Reviews</a>
-                    <a href="/videos.html" class="nav-link">Videos</a>
-                    <a href="/featured.html" class="nav-link">Featured</a>
+                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="news.html" class="nav-link">News</a>
+                    <a href="rewies.html" class="nav-link">Reviews</a>
+                    <a href="videos.html" class="nav-link">Videos</a>
+                    <a href="featured.html" class="nav-link">Featured</a>
                     <a href="#" class="nav-link">Phone Finder</a>
                     <a href="#" class="nav-link">Deals</a>
                     <a href="#" class="nav-link">Merch</a>
@@ -121,11 +121,11 @@
             <i class="fas fa-share-alt"></i>
         </div>
         <div class="column">
-            <a href="/index.html">Home</a>
-            <a href="/news.html">News</a>
-            <a href="/rewies.html">Reviews</a>
-            <a href="/videos.html">Videos</a>
-            <a href="/featured.html">Featured</a>
+            <a href="index.html">Home</a>
+            <a href="news.html">News</a>
+            <a href="rewies.html">Reviews</a>
+            <a href="videos.html">Videos</a>
+            <a href="featured.html">Featured</a>
             <a href="#">Rumor Mill</a>
             <a href="#">Compare</a>
             <a href="#">Coverage</a>
@@ -243,15 +243,15 @@
             </div>
             <div class="col-8 col-md-5 wanted">
                 <div>
-                    <img class="w-md-100" src="/imges/download-2.jpeg" alt="Nothing CMF Phone 2 Pro">
+                    <img class="w-md-100" src="imges/download-2.jpeg" alt="Nothing CMF Phone 2 Pro">
                 </div>
             </div>
             <div class="col-5 col-md-3 froud">
                 <div class="review-column-list-item review-column-list-item-secondary">
-                    <img class="review-list-item-image" src="/imges/download-3.jpeg"
+                    <img class="review-list-item-image" src="imges/download-3.jpeg"
                         alt="Moto G Stylus 5G (2025) review">
 
-                    <img class="review-list-item-image" src="/imges/download-5.jpeg" alt="Google Pixel 9a review">
+                    <img class="review-list-item-image" src="imges/download-5.jpeg" alt="Google Pixel 9a review">
                 </div>
             </div>
         </div>
@@ -629,7 +629,7 @@
 
             </div>
             <div class="col-md-8 col-12 sentizer-er">
-                <img class="center-of-law volunteer " src="/imges/Screenshot (147).png" alt="">
+                <img class="center-of-law volunteer " src="imges/Screenshot (147).png" alt="">
                 <div class="comfort-zone mt-4 bg-white d-flex align-items-start p-3 ">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/weekly-poll-results-oneplus-13t/-344x215/gsmarena_000.jpg"
                         alt="Top 10 Trending Phones" class="img-fluid rounded-start" />
@@ -710,7 +710,7 @@
                     </div>
                 </div>
                 <div class="comfort-zone mt-4">
-                    <img class="volunteer" src="/imges/Screenshot (150).png" alt="">
+                    <img class="volunteer" src="imges/Screenshot (150).png" alt="">
                 </div>
                 <div class="comfort-zone py-3 px-2">
                     <p class="text-center ">Advertisemant</p>
@@ -784,7 +784,7 @@
                         src="https://fdn.gsmarena.com/imgroot/static/banners/self/review-poco-x7-pro-728x90.jpg" alt="">
                 </div>
                 <div class="comfort-zone mt-4">
-                    <img class="volunteer" src="/imges/download-corner.jpeg" alt="">
+                    <img class="volunteer" src="imges/download-corner.jpeg" alt="">
                 </div>
                 <div class="comfort-zone mt-3 bg-white d-flex align-items-start p-3 ">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/samsung-folding-iphone-display-feature/-344x215/gsmarena_000.jpg"
@@ -796,7 +796,7 @@
                     </div>
                 </div>
                 <div class="comfort-zone mt-4 px-2">
-                    <img class="volunteer" src="/imges/download-colecon.jpeg" alt="">
+                    <img class="volunteer" src="imges/download-colecon.jpeg" alt="">
                 </div>
                 <div class="comfort-zone py-3 mt-2 px-2">
                     <p class="text-center ">Advertisemant</p>
@@ -914,7 +914,7 @@
                     </div>
                 </div>
                 <div class="comfort-zone mt-4 px-2">
-                    <img class="volunteer" src="/imges/mobiles.jpeg" alt="">
+                    <img class="volunteer" src="imges/mobiles.jpeg" alt="">
                 </div>
                 <div class="comfort-zone py-3 mt-2 px-2">
                     <p class="text-center ">Advertisemant</p>
@@ -932,7 +932,7 @@
                     </div>
                 </div>
                 <div class="comfort-zone mt-4 px-2">
-                    <img class="volunteer" src="/imges/download-1223.jpeg" alt="">
+                    <img class="volunteer" src="imges/download-1223.jpeg" alt="">
                 </div>
                 <div class="comfort-zone mt-3 bg-white d-flex align-items-start p-3 ">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/samsung-galaxy-s25-ultra-first-one-ui-8-beta/-344x215/gsmarena_000.jpg"
@@ -945,7 +945,7 @@
                     </div>
                 </div>
                 <div class="comfort-zone mt-4 px-2">
-                    <img class="volunteer" src="/imges/system-mobile.jpeg" alt="">
+                    <img class="volunteer" src="imges/system-mobile.jpeg" alt="">
                 </div>
                 <div class="comfort-zone mt-3 bg-white d-flex align-items-start p-3 ">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/galaxy-s25-edge-teaser-video/-344x215/gsmarena_000.jpg"
@@ -1047,7 +1047,7 @@
                     </div>
                 </div>
                 <div class="comfort-zone mt-4 px-2">
-                    <img class="volunteer" src="/imges/sony-well.jpeg" alt="">
+                    <img class="volunteer" src="imges/sony-well.jpeg" alt="">
                 </div>
                 <div class="comfort-zone mt-3 bg-white d-flex align-items-start p-3 ">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/samusng-acquires-masimos-sound-united/-344x215/gsmarena_000.jpg"
@@ -1184,7 +1184,7 @@
                     </div>
                 </div>
                 <div class="comfort-zone mt-2  bg-white d-flex align-items-start p-3 ">
-                    <img src="/imges/motrola.jpeg" alt="Top 10 Trending Phones" class="volunteer" />
+                    <img src="imges/motrola.jpeg" alt="Top 10 Trending Phones" class="volunteer" />
 
                 </div>
                 <div class="comfort-zone mt-2  bg-white d-flex align-items-start p-3 ">
@@ -1275,7 +1275,7 @@
                     </div>
                 </div>
                 <div class="comfort-zone mt-2  bg-white d-flex align-items-start p-3 ">
-                    <img src="/imges/contro.jpeg" alt="Mobile" class="volunteer" />
+                    <img src="imges/contro.jpeg" alt="Mobile" class="volunteer" />
                 </div>
                 <div class="comfort-zone mt-2  bg-white d-flex align-items-start p-3 ">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/honor-400-geekbench/-344x215/gsmarena_001.jpg"
@@ -1336,7 +1336,7 @@
                     </div>
                 </div>
                 <div class="comfort-zone mt-2  bg-white d-flex align-items-start p-3 ">
-                    <img src="/imges/Screenshot (152).png" alt="Top 10 Trending Phones" class="volunteer" />
+                    <img src="imges/Screenshot (152).png" alt="Top 10 Trending Phones" class="volunteer" />
 
                 </div>
                 <div class="comfort-zone mt-2  bg-white d-flex align-items-start p-3 ">
