--- a/videos.html
+++ b/videos.html
@@ -31,7 +31,7 @@
                 </button>
 
                 <a class="navbar-brand d-flex align-items-center " href="#">
-                    <img src="/imges/download.png" alt="GSMArena Logo" />
+                    <img src="imges/download.png" alt="GSMArena Logo" />
                 </a>
                 <form action="" class="central d-flex align-items-center">
                     <input type="text" class="no-focus-border" placeholder="Search">
@@ -80,11 +80,11 @@
         <div id="leftMenu" class="container ">
             <div class="row">
                 <div class="col-12 d-flex align-items-center d-block">
-                    <a href="/index.html" class="nav-link">Home</a>
-                    <a href="/news.html" class="nav-link">News</a>
-                    <a href="/rewies.html" class="nav-link">Reviews</a>
-                    <a href="/videos.html" class="nav-link">Videos</a>
-                    <a href="/featured.html" class="nav-link">Featured</a>
+                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="news.html" class="nav-link">News</a>
+                    <a href="rewies.html" class="nav-link">Reviews</a>
+                    <a href="videos.html" class="nav-link">Videos</a>
+                    <a href="featured.html" class="nav-link">Featured</a>
                     <a href="#" class="nav-link">Phone Finder</a>
                     <a href="#" class="nav-link">Deals</a>
                     <a href="#" class="nav-link">Merch</a>
@@ -124,11 +124,11 @@
         <div class="column">
 
             <!-- Links section -->
-            <a href="/index.html">Home</a>
-            <a href="/news.html">News</a>
-            <a href="/rewies.html">Reviews</a>
+            <a href="index.html">Home</a>
+            <a href="news.html">News</a>
+            <a href="rewies.html">Reviews</a>
             <a href="videos.html">Videos</a>
-            <a href="/featured.html">Featured</a>
+            <a href="featured.html">Featured</a>
             <a href="#">Rumor Mill</a>
             <a href="#">Glossary</a>
             <a href="#">Coverage</a>
@@ -208,7 +208,7 @@
                     Remor Mill</button>
             </div>
             <div class="col-8 comfort-life-zone">
-                <img src="/imges/Screenshot (162).png" alt="">
+                <img src="imges/Screenshot (162).png" alt="">
             </div>
         </div>
     </div>
