--- a/rewies.html
+++ b/rewies.html
@@ -24,7 +24,7 @@
 </head>
 
 <body style="background-color: #EFEBE9;">
-    <div class="main-wrapper d-md-inline d-none ">
+    <div class="main-wrapper d-lg-inline d-none ">
         <!-- Top Navbar -->
         <nav class="navbar navbar-dark ">
             <div class="container const  d-flex align-items-center justify-content-start">
@@ -113,7 +113,7 @@
             </button>
         </div>
     </nav>
-    <div class="collapse mobile-menu d-md-none" id="mobileMenu">
+    <div class="collapse mobile-menu d-lg-none" id="mobileMenu">
         <!-- Icons row -->
         <div class="menu-icons">
             <i class="fas fa-home"></i>
