--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body style="background-color: #EFEBE9;">
-    <div class="main-wrapper d-md-inline d-none ">
+    <div class="main-wrapper d-lg-inline d-none ">
         <!-- Top Navbar -->
         <nav class="navbar navbar-dark ">
             <div class="container const  d-flex align-items-center justify-content-start">
@@ -112,7 +112,7 @@
         </div>
     </nav>
 
-    <div class="collapse mobile-menu d-md-none" id="mobileMenu">
+    <div class="collapse mobile-menu d-lg-none" id="mobileMenu">
         <div class="menu-icons">
             <i class="fas fa-home"></i>
             <i class="fab fa-facebook-f"></i>
