--- a/phonefinder.html
+++ b/phonefinder.html
@@ -22,7 +22,7 @@
 </head>
 
 <body style="background-color: #EFEBE9;">
-    <div class="main-wrapper d-md-inline d-none ">
+    <div class="main-wrapper d-lg-inline d-none ">
         <!-- Top Navbar -->
         <nav class="navbar navbar-dark ">
             <div class="container const  d-flex align-items-center justify-content-start">
@@ -95,7 +95,7 @@
         </div>
 
     </div>
-    <nav class="mobile-navbar d-md-none d-flex justify-content-between  align-items-center">
+    <nav class="mobile-navbar d-lg-none d-flex justify-content-between  align-items-center">
 
         <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#mobileMenu"
             aria-controls="mobileMenu" aria-expanded="false" aria-label="Toggle navigation">
