--- a/videos.html
+++ b/videos.html
@@ -112,7 +112,7 @@
         </div>
     </nav>
 
-    <div class="collapse mobile-menu d-md-none" id="mobileMenu">
+    <div class="collapse mobile-menu d-lg-none" id="mobileMenu">
         <!-- Icons row -->
         <div class="menu-icons">
             <i class="fas fa-home"></i>
