--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
 
     </div>
-    <nav class="mobile-navbar d-md-none d-flex justify-content-between  align-items-center">
+    <nav class="mobile-navbar d-lg-none d-flex justify-content-between  align-items-center">
 
         <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#mobileMenu"
             aria-controls="mobileMenu" aria-expanded="false" aria-label="Toggle navigation">
