--- a/phonefinder.html
+++ b/phonefinder.html
@@ -208,7 +208,7 @@
             </div>
             <div class="col-md-8 col-5  d-md-inline col-12 ">
                 <div class="comfort-life position-absolute">
-                    <img class="w-100 h-100" src="/imges/magnifient sectton.jpeg"
+                    <img class="w-100 h-100" src="imges/magnifient sectton.jpeg"
                         style="background-repeat: no-repeat; background-size: cover;" alt="">
                  
                 </div>
