--- a/featured.html
+++ b/featured.html
@@ -85,7 +85,7 @@
                     <a href="rewies.html" class="nav-link">Reviews</a>
                     <a href="videos.html" class="nav-link">Videos</a>
                     <a href="featured.html" class="nav-link">Featured</a>
-                    <a href="#" class="nav-link">Phone Finder</a>
+                    <a href="phonefinder.html" class="nav-link">Phone Finder</a>
                     <a href="#" class="nav-link">Deals</a>
                     <a href="#" class="nav-link">Merch</a>
                     <a href="#" class="nav-link">Coverage</a>
@@ -128,7 +128,7 @@
             <a href="rewies.html">Reviews</a>
             <a href="videos.html">Videos</a>
             <a href="featured.html">Featured</a>
-            <a href="#">Rumor Mill</a>
+            <a href="phonefinder.html">Phone Finder</a>
             <a href="#">Glossary</a>
             <a href="#">Coverage</a>
             <a href="#">Contact Us</a>
