--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <a href="rewies.html" class="nav-link">Reviews</a>
                     <a href="videos.html" class="nav-link">Videos</a>
                     <a href="featured.html" class="nav-link">Featured</a>
-                    <a href="#" class="nav-link">Phone Finder</a>
+                    <a href="phonefinder.html" class="nav-link">Phone Finder</a>
                     <a href="#" class="nav-link">Deals</a>
                     <a href="#" class="nav-link">Merch</a>
                     <a href="#" class="nav-link">Coverage</a>
@@ -126,7 +126,7 @@
             <a href="rewies.html">Reviews</a>
             <a href="videos.html">Videos</a>
             <a href="featured.html">Featured</a>
-            <a href="#">Rumor Mill</a>
+            <a href="phonefinder.html">Phone Finder</a>
             <a href="#">Compare</a>
             <a href="#">Coverage</a>
             <a href="#">Contact Us</a>
@@ -221,7 +221,7 @@
             </div>
             <div class="col-4 col-md-3 conjection-froud">
                 <div class="review-column-list-item review-column-list-item-secondary">
-                    <img class="review-list-item-image"
+                    <img class="review-list-item-image "
                         src="https://fdn.gsmarena.com/imgroot/reviews/25/motorola-moto-g-stylus-2025/-347x151/gsmarena_001.jpg"
                         alt="Moto G Stylus 5G (2025) review">
 
@@ -248,10 +248,10 @@
             </div>
             <div class="col-5 col-md-3 froud">
                 <div class="review-column-list-item review-column-list-item-secondary">
-                    <img class="review-list-item-image" src="imges/download-3.jpeg"
+                    <img class="review-list-item-image " src="imges/download-3.jpeg"
                         alt="Moto G Stylus 5G (2025) review">
 
-                    <img class="review-list-item-image" src="imges/download-5.jpeg" alt="Google Pixel 9a review">
+                    <img class="review-list-item-image " src="imges/download-5.jpeg" alt="Google Pixel 9a review">
                 </div>
             </div>
         </div>
