--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
             </div>
             <div class="col-md-8 col-12 wrapper sentizer-er ">
-                <div class="rena m-auto">
+                <div class="rena w-100">
                     <h1 class=" d-flex align-items-center justify-content-start warently  text-center m-auto">SmartPhone
                         Buyer's Guide
                         <i class="fa-solid fa-bell fa-lg  d-flex justify-content-end align-items-end m-auto px-auto"
