--- a/phonefinder.html
+++ b/phonefinder.html
@@ -80,11 +80,11 @@
         <div id="leftMenu" class="container ">
             <div class="row">
                 <div class="col-12 d-flex align-items-center d-block">
-                    <a href="/index.html" class="nav-link">Home</a>
-                    <a href="/news.html" class="nav-link">News</a>
-                    <a href="/rewies.html" class="nav-link">Reviews</a>
-                    <a href="/videos.html" class="nav-link">Videos</a>
-                    <a href="/featured.html" class="nav-link">Featured</a>
+                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="news.html" class="nav-link">News</a>
+                    <a href="rewies.html" class="nav-link">Reviews</a>
+                    <a href="videos.html" class="nav-link">Videos</a>
+                    <a href="featured.html" class="nav-link">Featured</a>
                     <a href="phonefinder.html" class="nav-link">Phone Finder</a>
                     <a href="#" class="nav-link">Deals</a>
                     <a href="#" class="nav-link">Merch</a>
