--- a/phonefinder.html
+++ b/phonefinder.html
@@ -123,11 +123,11 @@
         <div class="column">
 
             <!-- Links section -->
-            <a href="/index.html">Home</a>
-            <a href="/news.html">News</a>
-            <a href="/rewies.html">Reviews</a>
-            <a href="/videos.html">Videos</a>
-            <a href="/featured.html">Featured</a>
+            <a href="index.html">Home</a>
+            <a href="news.html">News</a>
+            <a href="rewies.html">Reviews</a>
+            <a href="videos.html">Videos</a>
+            <a href="featured.html">Featured</a>
             <a href="phonefinder.html">Phone Finder</a>
             <a href="#">Glossary</a>
             <a href="#">Coverage</a>
