--- a/phonefinder.html
+++ b/phonefinder.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GSMArena New Page</title>
+    <title>GSMArena</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -31,7 +31,7 @@
                 </button>
 
                 <a class="navbar-brand d-flex align-items-center " href="#">
-                    <img src="/imges/download.png" alt="GSMArena Logo" />
+                    <img src="imges/download.png" alt="GSMArena Logo" />
                 </a>
                 <form action="" class="central d-flex align-items-center">
                     <input type="text" class="no-focus-border" placeholder="Search">
@@ -111,8 +111,8 @@
             </button>
         </div>
     </nav>
-    <div class="collapse mobile-menu d-md-none" id="mobileMenu">
-        <!-- Icons row -->
+
+    <div class="collapse mobile-menu d-lg-none" id="mobileMenu">
         <div class="menu-icons">
             <i class="fas fa-home"></i>
             <i class="fab fa-facebook-f"></i>
@@ -121,15 +121,13 @@
             <i class="fas fa-share-alt"></i>
         </div>
         <div class="column">
-
-            <!-- Links section -->
             <a href="index.html">Home</a>
             <a href="news.html">News</a>
             <a href="rewies.html">Reviews</a>
             <a href="videos.html">Videos</a>
             <a href="featured.html">Featured</a>
             <a href="phonefinder.html">Phone Finder</a>
-            <a href="#">Glossary</a>
+            <a href="#">Compare</a>
             <a href="#">Coverage</a>
             <a href="#">Contact Us</a>
             <a href="#">Merch</a>
