--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -152,7 +151,7 @@
             <button class="btn btn-danger w-50">📱 Phone Finder</button>
             <button class="btn btn-primary w-50">📲 My Phone</button>
         </div>
-    </div>
+    </div>  
     <div class="container support content-wrapper" id="Top">
         <div class="row">
             <div class="col-md-4 col-5">
@@ -204,7 +203,7 @@
                     <i class="fa-solid fa-volume-high fa-sm"></i>
                     Remor Mill</button>
             </div>
-            <div class="col-md-5 d-block d-md-inline col-12 bobile">
+            <div class="col-md-5 d-block d-md-inline col-5 d-none d-md-inline bobile">
                 <div class="comfort">
                     <div class="conjection position-absolute mx-3 my-2 ">
                         <i class="fa-solid fa-clock fa-sm" style="color: white;"></i>
@@ -219,7 +218,20 @@
                     <h1 class="position-absolute">Nothing CMF Phone 2 Pro review</h1>
                 </div>
             </div>
-            <div class="col-4 col-md-3 conjection-froud">
+            <div class="col-12 col-md-3 conjection-froud">
+                <div class="comfort d-md-none d-block">
+                    <div class="conjection position-absolute mx-3 my-2 ">
+                        <i class="fa-solid fa-clock fa-sm" style="color: white;"></i>
+                        <span clas s="text-white font-bold pb-5" style="font-size: 13px;">8 may 2025 </span>
+                    </div>
+                    <div class="conjection position-absolute  mx-3 my-2 end-0">
+                        <i class="fa-solid fa-comment fa-sm" style="color: white;"></i>
+                        <span class="text-white ">80</span>
+                    </div>
+                    <img src="https://fdn.gsmarena.com/imgroot/reviews/25/nothing-cmf-phone-2-pro/-728x314/gsmarena_001.jpg"
+                        alt="Nothing CMF Phone 2 Pro" style="margin-left: -10px;">
+                    <h1 class="position-absolute">Nothing CMF Phone 2 Pro review</h1>
+                </div>
                 <div class="review-column-list-item review-column-list-item-secondary">
                     <img class="review-list-item-image "
                         src="https://fdn.gsmarena.com/imgroot/reviews/25/motorola-moto-g-stylus-2025/-347x151/gsmarena_001.jpg"
@@ -243,7 +255,7 @@
             </div>
             <div class="col-8 col-md-5 wanted">
                 <div>
-                    <img class="w-md-100" src="imges/download-2.jpeg" alt="Nothing CMF Phone 2 Pro">
+                    <img class="w-md-100 d-md-inline d-none" src="imges/download-2.jpeg" alt="Nothing CMF Phone 2 Pro">
                 </div>
             </div>
             <div class="col-5 col-md-3 froud">
