--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
     <div class="main-wrapper d-lg-inline d-none ">
         <!-- Top Navbar -->
         <nav class="navbar navbar-dark ">
-            <div class="container const  d-flex align-items-center justify-content-start">
+            <div class="container const  d-flex align-items-center justify-content-between ">
                 <button class="navbar-toggler me-3" type="button" onclick="toggleMenu()">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -411,7 +411,7 @@
                 </div>
 
             </div>
-            <div class="col-md-8  col-12  sentizer-er">
+            <div class="col-md-8  col-12  sentizer-er" style="background-color: #EEEEEE; ">
                 <div class="comfort-zone mt-4 bg-white d-flex align-items-start p-3 ">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/realme-neo7-turbo-first-announcement/-344x215/gsmarena_001.jpg"
                         alt="Top 10 Trending Phones" class="img-fluid rounded-start" />
