--- a/rewies.html
+++ b/rewies.html
@@ -27,7 +27,7 @@
     <div class="main-wrapper d-lg-inline d-none ">
         <!-- Top Navbar -->
         <nav class="navbar navbar-dark ">
-            <div class="container const  d-flex align-items-center justify-content-start">
+            <div class="container const  d-flex align-items-center justify-content-between ">
                 <button class="navbar-toggler me-3" type="button" onclick="toggleMenu()">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -472,9 +472,8 @@
                 </div>
                 <h5 style="border-left: solid 5px grey ;" class="px-3 text-secondary">Popular comparisons</h5>
 
-                <div class="sentizer mt-4 p-3 rounded shadow-sm" style="    text-transform: Uppercase;
-                                font-size: 11px;
-                                font-weight: 800;">
+                <div class="sentizer mt-4 p-3 rounded shadow-sm" style="background-color: #EEEEEE; text-transform:
+                    Uppercase; font-size: 11px; font-weight: 800;">
                     <div class="row">
                         <div class="col-12">
                             <p class="mb-2" style="background-color: #FFF2EE;">Samsung Galaxy A55 vs. Galaxy A56</p>
@@ -781,7 +780,7 @@
                     <img src="https://fdn.gsmarena.com/imgroot/reviews/24/honor-200-pro/-347x151/gsmarena_001.jpg"
                         alt="Nothing CMF Phone 2 Pro">
                     <div class="review-card-body">
-                        <div class="review-card-title">Honor 200 Pro review   </div>
+                        <div class="review-card-title">Honor 200 Pro review </div>
                         <div class="review-card-meta">
                             <span>15 April 2025 </span>
                             <span><i class="bi bi-chat-dots-fill"></i>103 comments</span>
