--- a/videos.html
+++ b/videos.html
@@ -25,7 +25,7 @@
     <div class="main-wrapper d-lg-inline d-none ">
         <!-- Top Navbar -->
         <nav class="navbar navbar-dark ">
-            <div class="container const  d-flex align-items-center justify-content-start">
+            <div class="container const  d-flex align-items-center justify-content-between">
                 <button class="navbar-toggler me-3" type="button" onclick="toggleMenu()">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -321,7 +321,7 @@
                     src="https://fdn.gsmarena.com/imgroot/static/banners/self/review-iphone-16e-300x250.jpg" alt="">
 
             </div>
-            <div class="col-md-8 col-12 wrapper sentizer-er ">
+            <div class="col-md-8 col-12 wrapper sentizer-er " style="background-color: #EEEEEE; ">
                 <iframe width="710" style="margin-top: 22px;" height="375"
                     src="https://www.youtube.com/embed/i3ZU9-TGJlE?si=9t_Ue5Yad0x4W7u_" title="YouTube video player"
                     frameborder="0"
