--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,7 +25,7 @@
     <div class="main-wrapper d-lg-inline d-none ">
         <!-- Top Navbar -->
         <nav class="navbar navbar-dark ">
-            <div class="container const  d-flex align-items-center justify-content-start">
+            <div class="container const  d-flex align-items-center justify-content-between">
                 <button class="navbar-toggler me-3" type="button" onclick="toggleMenu()">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -151,7 +152,7 @@
             <button class="btn btn-danger w-50">📱 Phone Finder</button>
             <button class="btn btn-primary w-50">📲 My Phone</button>
         </div>
-    </div>  
+    </div>
     <div class="container support content-wrapper" id="Top">
         <div class="row">
             <div class="col-md-4 col-5">
@@ -220,7 +221,7 @@
             </div>
             <div class="col-12 col-md-3 conjection-froud">
                 <div class="comfort d-md-none d-block">
-                    <div class="conjection position-absolute mx-3 my-2 ">
+                    <div class="conjection position-absolute mx-2  my-2 ">
                         <i class="fa-solid fa-clock fa-sm" style="color: white;"></i>
                         <span clas s="text-white font-bold pb-5" style="font-size: 13px;">8 may 2025 </span>
                     </div>
@@ -229,16 +230,16 @@
                         <span class="text-white ">80</span>
                     </div>
                     <img src="https://fdn.gsmarena.com/imgroot/reviews/25/nothing-cmf-phone-2-pro/-728x314/gsmarena_001.jpg"
-                        alt="Nothing CMF Phone 2 Pro" style="margin-left: -10px;">
+                        alt="Nothing CMF Phone 2 Pro">
                     <h1 class="position-absolute">Nothing CMF Phone 2 Pro review</h1>
                 </div>
-                <div class="review-column-list-item review-column-list-item-secondary">
+                <div style="margin-left: -3px;" class="review-column-list-item review-column-list-item-secondary">
                     <img class="review-list-item-image "
                         src="https://fdn.gsmarena.com/imgroot/reviews/25/motorola-moto-g-stylus-2025/-347x151/gsmarena_001.jpg"
                         alt="Moto G Stylus 5G (2025) review">
 
                     <h1>Mooto G Stylus 5G (2025) review</h1>
-                    <img class="review-list-item-image"
+                    <img style="margin-left: -3px;" class="review-list-item-image"
                         src="https://fdn.gsmarena.com/imgroot/reviews/25/google-pixel-9a/-347x151/gsmarena_001.jpg"
                         alt="Google Pixel 9a review">
                     <h1>Google pIxel 9a Review</h1>
@@ -640,7 +641,7 @@
                 </div>
 
             </div>
-            <div class="col-md-8 col-12 sentizer-er">
+            <div class="col-md-8 col-12 sentizer-er" style="background-color: #EEEEEE;">
                 <img class="center-of-law volunteer " src="imges/Screenshot (147).png" alt="">
                 <div class="comfort-zone mt-4 bg-white d-flex align-items-start p-3 ">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/weekly-poll-results-oneplus-13t/-344x215/gsmarena_000.jpg"
@@ -651,7 +652,7 @@
                         <span>the Phone is Launching in two Markets Unlesss Oneplus reconsider </span>
                     </div>
                 </div>
-                <div class="comfort-zone mt-4 bg-white d-flex align-items-start p-3 ">
+                <div class="comfort-zone mt-4  d-flex align-items-start p-3" >
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/deals-9/-344x215/gsmarena_us.jpg"
                         class="img-fluid rounded-start" />
                     <div class="content px-3">
@@ -667,7 +668,7 @@
                         <p class="fw-bold">This is the OnePlus Pad 2 Pro and its looks familiar</p>
                         <span>It will be fully unvieled on may 13</span>
                     </div>
-                </div>x
+                </div>
                 <div class="comfort-zone mt-4 bg-white d-flex align-items-start p-3 ">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/deals-9/-344x215/gsmarena_de.jpg"
                         class="img-fluid rounded-start" />
