--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             <div class="d-flex">
                 <h4 class="text-secondary mt-2 d-inline">top 10 by Daily Interest </h4>
             </div>
-            <div class="col-lg-4 col-12  bg-white p-3">
+            <div class="col-lg-4 col-md-5 col-12  bg-white p-3">
                 <div class="center">
                     <table class="table table-sm custom-table">
                         <thead>
@@ -641,7 +641,7 @@
                 </div>
 
             </div>
-            <div class="col-md-8 col-12 sentizer-er" style="background-color: #EEEEEE;">
+            <div class="col-lg-8 col-md-7 col-12 sentizer-er" style="background-color: #EEEEEE;">
                 <img class="center-of-law volunteer " src="imges/Screenshot (147).png" alt="">
                 <div class="comfort-zone mt-4 bg-white d-flex align-items-start p-3 ">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/weekly-poll-results-oneplus-13t/-344x215/gsmarena_000.jpg"
