--- a/news.html
+++ b/news.html
@@ -234,7 +234,7 @@
     </div>
     <div class="container mt-0  ">
         <div class="row">
-            <div class="col-lg-4 col-12  bg-white p-3">
+            <div class="col-lg-4 col-md-6 col-12  bg-white p-3">
 
                 <img src="https://fdn.gsmarena.com/imgroot/static/banners/self/arenaev-300x250.jpg" class="w-100 "
                     style="width: 400px;" alt="">
@@ -411,7 +411,7 @@
                 </div>
 
             </div>
-            <div class="col-md-8  col-12  sentizer-er" style="background-color: #EEEEEE; ">
+            <div class="col-lg-8 col-md-6  col-12  sentizer-er" style="background-color: #EEEEEE; ">
                 <div class="comfort-zone mt-4 bg-white d-flex align-items-start p-3 ">
                     <img src="https://fdn.gsmarena.com/imgroot/news/25/05/realme-neo7-turbo-first-announcement/-344x215/gsmarena_001.jpg"
                         alt="Top 10 Trending Phones" class="img-fluid rounded-start" />
