--- a/phonefinder.html
+++ b/phonefinder.html
@@ -86,7 +86,7 @@
                     <a href="videos.html" class="nav-link">Videos</a>
                     <a href="featured.html" class="nav-link">Featured</a>
                     <a href="phonefinder.html" class="nav-link">Phone Finder</a>
-                    <a href="#" class="nav-link">Deals</a>
+                    <a href="compare.html" class="nav-link">Compare</a>
                     <a href="#" class="nav-link">Merch</a>
                     <a href="#" class="nav-link">Coverage</a>
                     <a href="#" class="nav-link">Contact</a>
@@ -127,7 +127,7 @@
             <a href="videos.html">Videos</a>
             <a href="featured.html">Featured</a>
             <a href="phonefinder.html">Phone Finder</a>
-            <a href="#">Compare</a>
+            <a href="compare.html">Compare</a>
             <a href="#">Coverage</a>
             <a href="#">Contact Us</a>
             <a href="#">Merch</a>
@@ -546,7 +546,7 @@
                         </div>
                     </div>
 
-                    <div class="filter-header mx-1 mb-2">SENSORS</div>
+                    <div class="filter-header mx-1 mb-4">SENSORS</div>
                     <div class="row">
                         <div class="col-lg-6 d-flex align-items-center justify-content-center">
                             <label class="btn  w-100 text-start mb-0 fw-bolder" style="border-radius: 1px;">
@@ -813,7 +813,7 @@
                     <span class="text-muted">max</span>
                 </div>
 
-                <div class="row mt-4">
+                <div class="row mt-5">
                     <div class="col-lg-6 d-flex align-items-center mt-3 justify-content-center">
                         <label class="btn  w-100 text-start mb-0 fw-bolder" style="border-radius: 1px;">
                             <input type="checkbox" class="form-check-input me-2 float-end"> COMPASS
@@ -825,7 +825,7 @@
                         </label>
                     </div>
                 </div>
-                <button style="border-radius: 1px;" class=" btn btn-toggle w-100 mt-2 text-start" type="button"
+                <button style="border-radius: 1px;" class=" btn btn-toggle w-100 mt-2 mb-3 text-start" type="button"
                     data-bs-toggle="collapse" data-bs-target="#fingerCollapse" aria-expanded="false"
                     aria-controls="fingerCollapse">
                     Fingerprint
@@ -904,7 +904,7 @@
                     <input type="range" class="form-range custom-range flex-grow-1" min="2000" max="2025"
                         id="rangeSize" />
                 </div>
-                <div class="filter-header my-3" style="margin-left: -1px;">Main Camera</div>
+                <div class="filter-header mt-4 mb-3" style="margin-left: -1px;">Main Camera</div>
                 <div class="filter-box  ">
                     <span class="filter-label ">Resolution</span>
                     <span id="sizeValue">Any</span>
@@ -942,7 +942,7 @@
                         </label>
                     </div>
                 </div>
-                <div class="filter-header mt-3 mb-2 fs-5 " style="margin-left: -1px;">CONNECTIVITY</div>
+                <div class="filter-header mt-3 mb-3 fs-5 " style="margin-left: -1px;">CONNECTIVITY</div>
                 <button class="btn  btn-toggle w-100" type="button" data-bs-toggle="collapse"
                     data-bs-target="#wlanCollapse" aria-expanded="false" aria-controls="wlanCollapse">
                     WLAN(WI-FI)
@@ -1019,7 +1019,7 @@
                     <span class="text-muted">max</span>
                 </div>
 
-                <div class="filter-header mt-3 mb-2" style="margin-left: -1px;">Misc</div>
+                <div class="filter-header mt-3 mb-3" style="margin-left: -1px;">Misc</div>
                 <div class="filter-box">
                     <span class="filter-label">Free TExt</span>
 
@@ -1139,7 +1139,7 @@
 
                     </div>
                 </div>
-                <div class="row mt-4">
+                <div class="row mt-1">
                     <div class="col-lg-6 d-flex align-items-center justify-content-center mt-3">
                         <label class="btn  w-100 text-start mb-0 fw-bolder" style="border-radius: 1px;">
                             <input type="checkbox" class="form-check-input me-2 float-end"> DUAL CAMERA
