--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <a href="videos.html" class="nav-link">Videos</a>
                     <a href="featured.html" class="nav-link">Featured</a>
                     <a href="phonefinder.html" class="nav-link">Phone Finder</a>
-                    <a href="#" class="nav-link">Deals</a>
+                    <a href="compare.html" class="nav-link">Campare</a>
                     <a href="#" class="nav-link">Merch</a>
                     <a href="#" class="nav-link">Coverage</a>
                     <a href="#" class="nav-link">Contact</a>
@@ -127,7 +127,7 @@
             <a href="videos.html">Videos</a>
             <a href="featured.html">Featured</a>
             <a href="phonefinder.html">Phone Finder</a>
-            <a href="#">Compare</a>
+            <a href="compare.html">Compare</a>
             <a href="#">Coverage</a>
             <a href="#">Contact Us</a>
             <a href="#">Merch</a>
