--- a/compare.html
+++ b/compare.html
@@ -301,7 +301,7 @@
             <tbody>
                 <tr>
                     <td colspan="3" style="    color: #f14d4d;
-    font-size: 16px; background: #f9f9f9;">Network Technology
+    font-size: 16px; background: #f9f9f9; font-weight: 600;">Network Technology
                     </td>
                 </tr>
                 <tr>
@@ -312,7 +312,7 @@
 
                 <tr>
                     <td colspan="3" style="     color: #f14d4d;
-    font-size: 16px; background: #f9f9f9;">Announcement Date
+    font-size: 16px; background: #f9f9f9; font-weight: 600;">Announcement Date
                     </td>
                 </tr>
                 <tr>
@@ -322,7 +322,7 @@
                 </tr>
 
                 <tr>
-                    <td colspan="3" style="    color: #f14d4d;
+                    <td colspan="3" style=" font-weight: 600;   color: #f14d4d;
     font-size: 16px; background: #f9f9f9;">Availability /
                         Status</td>
                 </tr>
@@ -333,7 +333,7 @@
                 </tr>
 
                 <tr>
-                    <td colspan="3" style="    color: #f14d4d;
+                    <td colspan="3" style="  font-weight: 600;  color: #f14d4d;
     font-size: 16px; background: #f9f9f9;">Dimensions</td>
                 </tr>
                 <tr>
@@ -343,7 +343,7 @@
                 </tr>
 
                 <tr>
-                    <td colspan="3" style="    color: #f14d4d;
+                    <td colspan="3" style=" font-weight: 600;   color: #f14d4d;
     font-size: 16px; background: #f9f9f9;">Weight</td>
                 </tr>
                 <tr>
@@ -353,7 +353,7 @@
                 </tr>
 
                 <tr>
-                    <td colspan="3" style="     color: #f14d4d;
+                    <td colspan="3" style="  font-weight: 600;   color: #f14d4d;
     font-size: 16px;background: #f9f9f9;">Operating System
                         (OS)</td>
                 </tr>
@@ -364,7 +364,7 @@
                 </tr>
 
                 <tr>
-                    <td colspan="3" style="    color: #f14d4d;
+                    <td colspan="3" style=" font-weight: 600;   color: #f14d4d;
     font-size: 16px; background: #f9f9f9;">Chipset</td>
                 </tr>
                 <tr>
@@ -374,7 +374,7 @@
                 </tr>
 
                 <tr>
-                    <td colspan="3" style="     color: #f14d4d;
+                    <td colspan="3" style=" font-weight: 600;    color: #f14d4d;
     font-size: 16px; background: #f9f9f9;">Main Camera</td>
                 </tr>
                 <tr>
@@ -384,7 +384,7 @@
                 </tr>
 
                 <tr>
-                    <td colspan="3" style="    color: #f14d4d;
+                    <td colspan="3" style=" font-weight: 600;   color: #f14d4d;
     font-size: 16px; background: #f9f9f9;">Selfie Camera</td>
                 </tr>
                 <tr>
@@ -394,7 +394,7 @@
                 </tr>
 
                 <tr>
-                    <td colspan="3" style="    color: #f14d4d;
+                    <td colspan="3" style="  font-weight: 600;  color: #f14d4d;
     font-size: 16px; background: #f9f9f9;">Battery</td>
                 </tr>
                 <tr>
@@ -404,7 +404,7 @@
                 </tr>
 
                 <tr>
-                    <td colspan="3" style="    color: #f14d4d;
+                    <td colspan="3" style=" font-weight: 600;   color: #f14d4d;
     font-size: 16px; background: #f9f9f9;">Price</td>
                 </tr>
                 <tr>
