--- a/news.html
+++ b/news.html
@@ -89,7 +89,7 @@
                     <a href="compare.html" class="nav-link">Compare</a>
                     <a href="#" class="nav-link">Merch</a>
                     <a href="#" class="nav-link">Coverage</a>
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="contact.html" class="nav-link">Contact</a>
                 </div>
             </div>
         </div>
@@ -131,7 +131,7 @@
             <a href="phonefinder.html">Phone Finder</a>
             <a href="compare.html">Compare</a>
             <a href="#">Coverage</a>
-            <a href="#">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
             <a href="#">Merch</a>
             <a href="#">Tip Us</a>
             <a href="#">Privacy</a>
@@ -606,7 +606,7 @@
                     <a href="#">Mobile version</a>
                     <a href="#">Android app</a>
                     <a href="#">Tools</a>
-                    <a href="#">Contact us</a>
+                    <a href="contact.html">Contact us</a>
                     <a href="#">Merch store</a>
                     <a href="#">Privacy</a>
                     <a href="#">Terms of use</a>
