--- a/phonefinder.html
+++ b/phonefinder.html
@@ -89,7 +89,7 @@
                     <a href="compare.html" class="nav-link">Compare</a>
                     <a href="#" class="nav-link">Merch</a>
                     <a href="#" class="nav-link">Coverage</a>
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="contact.html" class="nav-link">Contact</a>
                 </div>
             </div>
         </div>
@@ -131,7 +131,8 @@
             <a href="#">Coverage</a>
             <a href="#">Contact Us</a>
             <a href="#">Merch</a>
-            <a href="#">Tip Us</a>
+            <a href="#">TipUs</a>
+            <a href="compare.html">Contact us</a>
             <a href="#">Privacy</a>
         </div>
         <div class="brand-grid">
