--- a/contact.html
+++ b/contact.html
@@ -200,257 +200,104 @@
                 <button class="solid w-50 py-2">
                     <i class="fa-solid fa-bars fa-sm"></i>
                     All Brands</button>
-                <button class="solid w-50 py-2">
+                <button class="solid py-2" style="width: 180px;">
                     <i class="fa-solid fa-volume-high fa-sm"></i>
                     Remor Mill</button>
             </div>
             <div class="col-md-8 col-5  d-md-inline  ">
                 <div class="comfort-life position-absolute">
-                    <img class="w-100 h-100" src="imges/magnifient sectton.jpeg"
+                    <img class="w-100 h-100 " src="imges/download-first.jpeg"
                         style="background-repeat: no-repeat; background-size: cover;" alt="">
                 </div>
             </div>
         </div>
 
     </div>
-    <div class="comparison-container container bg-white">
+    <div class="container mt-0  ">
         <div class="row">
-            <div class="phone-card col-lg-4">
-                <div class="compare-checkbox">
-                    <label>
-                        Compare
-                        <input type="text" name="compare" class="bg-white w-100 mx-2 text-center-auto border"
-                            placeholder="Search" />
-                    </label>
-                </div>
-                <div class="phone-name">Samsung Galaxy S25 Edge</div>
-                <div class="d-flex">
-                    <img src="https://fdn2.gsmarena.com/vv/bigpic/samsung-galaxy-s25-edge.jpg"
-                        alt="Samsung Galaxy S25 Edge">
-                    <div class="buttons">
-                        <button>REVIEW</button>
-                        <button>SPECIFICATIONS</button>
-                        <button>READ OPINIONS</button>
-                        <button>PICTURES</button>
-                    </div>
-                </div>
-                <div class="price text-center ">256GB 12GB RAM<br>$1,099.99</div>
-                <img src="imges/wanted.png" style="height: 40px; display: block; margin: auto;" alt="">
+            <div class="col-lg-4 col-md-6 col-12  bg-white p-3">
+
+                <img src="https://fdn.gsmarena.com/imgroot/static/banners/self/arenaev-300x250.jpg" class="w-100 "
+                    style="width: 400px;" alt="">
+
+                    <div class="cent">
+                    
+                        <div class="d-flex">
+                            <div class="canel">
+                                <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/nothing-cmf-phone-2-pro.jpg" alt="">
+                                <p>Nothing Cmf 2 </p>
+                            </div>
+                            <div class="canel mx-4">
+                                <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/motorola-edge-60-pro.jpg" alt="">
+                                <p>Motrola edge 60 </p>
+                            </div>
+                            <div class="canel ">
+                                <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/vivo-x200-ultra.jpg" alt="">
+                                <p>Vivo x200 Ultra</p>
+                            </div>
+                        </div>
+                        <div class="d-flex">
+                            <div class="canel">
+                                <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/vivo-t4.jpg" alt="">
+                                <p>Vivo t4</p>
+                            </div>
+                            <div class="canel mx-4">
+                                <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/motorola-edge-60.jpg" alt="">
+                                <p>Motrola Edge 16</p>
+                            </div>
+                            <div class="canel ">
+                                <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/motorola-razr-60-ultra-5g.jpg" alt="">
+                                <p>motorola razr 60 ultra</p>
+                            </div>
+                        </div>
+                        <div class="d-flex">
+                            <div class="canel">
+                                <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/vivo-iqoo-z10x.jpg" alt="">
+                                <p>Vivo iQ00 Z10 x</p>
+                            </div>
+                            <div class="canel mx-4">
+                                <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/motorola-moto-g-stylus-5g-2025.jpg" alt="">
+                                <p>Motrola Moto G </p>
+                            </div>
+                            <div class="canel ">
+                                <img class="shrink" src="https://fdn2.gsmarena.com/vv/bigpic/google-pixel-9a.jpg" alt="">
+                                <p>Google Pixel 9a </p>
+                            </div>
+                        </div>
+                        </div>
+              
             </div>
-            <div class="phone-card col-lg-4">
-                <div class="compare-checkbox">
-                    <label>
-                        Compare
-                        <input type="text" name="compare" class="bg-white w-100 mx-2 text-center-auto border"
-                            placeholder="Campare" />
-                    </label>
+            <div class="col-lg-8 col-md-6  col-12  sentizer-er" style="background-color: white; ">
+                <h4 class="western">We do appreciate your feedback</h4>
+                <div class="paragh-div">
+                    <p>We will be glad to hear from you if</p>
+                    <p>- You have found a mistake in our phone specifications.</p>
+                    <p>- You have info about a phone which we don't have in our database.</p>
+                    <p>- You have found a broken link.</p>
+                    <p>- You have a suggestion for improving GSMArena.com or you want to request a feature.</p>
                 </div>
-                <div class="phone-name">Apple iPhone 16</div>
-                <div class="d-flex">
-                    <img src="https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-16.jpg" alt="Apple iPhone 16" />
-                    <div class="buttons">
-                        <button>REVIEW</button>
-                        <button>SPECIFICATIONS</button>
-                        <button>READ OPINIONS</button>
-                        <button>PICTURES</button>
-                    </div>
-
+                <div class="paragh-div">
+                    <p>Before sending us an email, please keep in mind:</p>
+                    <p>- We do not sell mobile phones.</p>
+                    <p>- We do not know the price of any mobile phone in your country.</p>
+                    <p>- We don't answer any "unlocking" related questions.</p>
+                    <p>- We don't answer any "unlocking" related questions.</p>
+                    <p>Please use the Tip us form for any news story suggestions. </p>
                 </div>
-                <div class=" align-items-center m-auto">
-                    <div class=" price text-center ">128GB 8GB RAM<br>$899.99</div>
-                    <img src="imges/wanted.png" style="height: 40px;" alt="">
-                </div>
-            </div>
-            <div class="phone-card col-lg-4">
-                <div class="compare-checkbox">
-                    <label>
-                        Compare
-                        <input type="text" name="compare" class="bg-white w-100 mx-2 text-center-auto border"
-                            placeholder="Campare" />
-                    </label>
-                </div>
-                <div class="phone-name">Google Pixel 9</div>
-                <div class="d-flex">
-
-                    <img src="imges/download-123.jpeg" alt="Google Pixel 9" />
-
-                    <div class="buttons">
-                        <button>REVIEW</button>
-                        <button>SPECIFICATIONS</button>
-                        <button>READ OPINIONS</button>
-                        <button>PICTURES</button>
-                    </div>
+                <div class="paragh-div">
+                    <a href="" class="text-dark">support@gsmarena.com </a>
+                    <br>
+                    <a href="" class="text-dark">Click here to read more </a>
+                    <h4 class="western ">Advertising on GSMArena.com</h4>
+                    <p>Do you have an online mobile store? Are you interested in advertising on our site? GSMArena.com
+                        is accessed by millions
+                        of unique visitors daily, and is guaranteed to help boost your sales.</p>
 
                 </div>
-                <div class=" align-items-center m-auto">
-                    <div class=" price text-center ">128GB 8GB RAM<br>$899.99</div>
-                    <img src="imges/wanted.png" style="height: 40px;" alt="">
-                </div>
-
-            </div>
-        </div>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Samsung Galaxy S25 Edge</th>
-                    <th>Apple iPhone 16</th>
-                    <th>Google Pixel 9</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td colspan="3" style="    color: #f14d4d;
-    font-size: 16px; background: #f9f9f9; font-weight: 600;">Network Technology
-                    </td>
-                </tr>
-                <tr>
-                    <td>GSM / HSPA / LTE / 5G</td>
-                    <td>GSM / CDMA / HSPA / EVDO / LTE / 5G</td>
-                    <td>GSM / HSPA / LTE / 5G</td>
-                </tr>
-
-                <tr>
-                    <td colspan="3" style="     color: #f14d4d;
-    font-size: 16px; background: #f9f9f9; font-weight: 600;">Announcement Date
-                    </td>
-                </tr>
-                <tr>
-                    <td>Announced: 2025, May 13</td>
-                    <td>Announced: 2025, April 25</td>
-                    <td>Announced: 2025, June 10</td>
-                </tr>
-
-                <tr>
-                    <td colspan="3" style=" font-weight: 600;   color: #f14d4d;
-    font-size: 16px; background: #f9f9f9;">Availability /
-                        Status</td>
-                </tr>
-                <tr>
-                    <td>Status: Coming soon (Release May 29, 2025)</td>
-                    <td>Available (Released May 5, 2025)</td>
-                    <td>Coming soon</td>
-                </tr>
-
-                <tr>
-                    <td colspan="3" style="  font-weight: 600;  color: #f14d4d;
-    font-size: 16px; background: #f9f9f9;">Dimensions</td>
-                </tr>
-                <tr>
-                    <td>158.2 x 75.6 x 5.8 mm</td>
-                    <td>146.7 x 71.5 x 7.8 mm</td>
-                    <td>150.9 x 74.7 x 8.5 mm</td>
-                </tr>
-
-                <tr>
-                    <td colspan="3" style=" font-weight: 600;   color: #f14d4d;
-    font-size: 16px; background: #f9f9f9;">Weight</td>
-                </tr>
-                <tr>
-                    <td>163 g</td>
-                    <td>174 g</td>
-                    <td>180 g</td>
-                </tr>
-
-                <tr>
-                    <td colspan="3" style="  font-weight: 600;   color: #f14d4d;
-    font-size: 16px;background: #f9f9f9;">Operating System
-                        (OS)</td>
-                </tr>
-                <tr>
-                    <td>Android 15, One UI 7</td>
-                    <td>iOS 18</td>
-                    <td>Android 15</td>
-                </tr>
-
-                <tr>
-                    <td colspan="3" style=" font-weight: 600;   color: #f14d4d;
-    font-size: 16px; background: #f9f9f9;">Chipset</td>
-                </tr>
-                <tr>
-                    <td>Snapdragon 8 Elite (3 nm)</td>
-                    <td>Apple A18 Pro</td>
-                    <td>Tensor G4</td>
-                </tr>
-
-                <tr>
-                    <td colspan="3" style=" font-weight: 600;    color: #f14d4d;
-    font-size: 16px; background: #f9f9f9;">Main Camera</td>
-                </tr>
-                <tr>
-                    <td>200 MP + 12 MP (ultrawide)</td>
-                    <td>48 MP + 12 MP (ultrawide)</td>
-                    <td>50 MP + 12 MP (ultrawide)</td>
-                </tr>
-
-                <tr>
-                    <td colspan="3" style=" font-weight: 600;   color: #f14d4d;
-    font-size: 16px; background: #f9f9f9;">Selfie Camera</td>
-                </tr>
-                <tr>
-                    <td>12 MP (wide)</td>
-                    <td>12 MP (wide)</td>
-                    <td>10.8 MP (wide)</td>
-                </tr>
-
-                <tr>
-                    <td colspan="3" style="  font-weight: 600;  color: #f14d4d;
-    font-size: 16px; background: #f9f9f9;">Battery</td>
-                </tr>
-                <tr>
-                    <td>3900 mAh, 25W wired & 15W wireless</td>
-                    <td>3279 mAh, 20W wired & 15W MagSafe wireless</td>
-                    <td>4400 mAh, 30W wired & wireless</td>
-                </tr>
-
-                <tr>
-                    <td colspan="3" style=" font-weight: 600;   color: #f14d4d;
-    font-size: 16px; background: #f9f9f9;">Price</td>
-                </tr>
-                <tr>
-                    <td>$1099.99 / ₹109,999</td>
-                    <td>$1199.00 / ₹109,900</td>
-                    <td>$899.00 / ₹75,000</td>
-                </tr>
-            </tbody>
-        </table>
-
-
-</body>
-<div id="bottom" class="container d-flex" style="max-width: 1034px;">
-    <div class="row align-items-center">
-        <div class="col-md-2 m-auto col-4 d-flex justify-content-center align-items-center "> <img
-                src="https://fdn2.gsmarena.com/w/css/logo-gsmarena-com.png" alt="">
-        </div>
-        <div class="col-10 nav-wrap m-auto text-center ">
-            <div class="nav-container">
-                <a href="#">Home</a>
-                <a href="#">News</a>
-                <a href="#">Reviews</a>
-                <a href="#">Compare</a>
-                <a href="#">Coverage</a>
-                <a href="#">Glossary</a>
-                <a href="#">FAQ</a>
-                <a href="#"> <i class="fa-solid fa-wifi fa-sm"></i> RSS</a>
-                <a href="#"> <i class="fa-brands fa-youtube fa-sm"></i> YouTube</a>
-                <a href="#"> <i class="fa-brands fa-instagram fa-sm"></i> Instagram</a>
-                <a href="#"> <i class="fa-brands fa-tiktok fa-sm"></i>TikTok</a>
-                <a href="#"> <i class="fa-brands fa-facebook-f fa-sm"></i> Facebook</a>
-                <a href="#"> <i class="fa-brands fa-twitter fa-sm"></i>Twitter</a>
-                <a href="#">© 2000-2025 GSMArena.com</a>
-                <a href="#">Mobile version</a>
-                <a href="#">Android app</a>
-                <a href="#">Tools</a>
-                <a href="#">Contact us</a>
-                <a href="#">Merch store</a>
-                <a href="#">Privacy</a>
-                <a href="#">Terms of use</a>
             </div>
         </div>
     </div>
-</div>
-</div>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
